[project]
name = "ai_blog_generator"
version = "0.1.0"
description = "AI Blog Generator is powered by multi-agents based on Agno framework."
readme = "README.md"
authors = [
    { name = "Rohit Kumar Tiwari", email = "analyticalrohit.connect@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
	"python-dotenv",
	"newspaper4k",
	"lxml_html_clean",
	"agno",
	"openai",
	"google-genai",
	"anthropic",
	"gradio",
	"markdown"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
